前台登录部分页面引入

--- a/ThinkCheer/Application/Home/View/Signup/signin.html
+++ b/ThinkCheer/Application/Home/View/Signup/signin.html
@@ -5,57 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <title>signin</title>
+    <title>注册</title>
     <link rel="stylesheet" href="__PUBLIC__/front/css/framework7.ios.min.css">
     <link rel="stylesheet" href="__PUBLIC__/front/css/framework7.ios.colors.min.css">
     <link rel="stylesheet" href="__PUBLIC__/front/css/font-awesome.min.css">
-    <link rel="stylesheet" href="__PUBLIC__/front/css/style.css">
-    <link rel="stylesheet" href="__PUBLIC__/front/css/welcomescreen.css">
-    <link rel="stylesheet" href="__PUBLIC__/front/css/main.css">
+    <link rel="stylesheet" href="__PUBLIC__/front/css/llh1.css">
+    <script type="text/javascript"  src="__PUBLIC__/front/js/jquery.js"></script>
   </head>
   <body>
     <div class="statusbar-overlay"></div>
     <div class="views">
       <div class="view view-main">
         <!-- Top Navbar-->
-        <div class="navbar redBGColor">
+        <div class="navbar">
           <div class="navbar-inner">
-            <div class="left" style="width: 30px;"></div>
-            <div class="center whiteColor">登录</div>
-            <div class="right"><a href="__MODULE__/Signup/signup" class="external link whiteColor">注册</a></div>
+            <div class="left"><a href="signin.html" class="greyColor"><i class=" fa fa-arrow-left"></i></a></div>
+            <div class="center redColor">注册</div>
+            <div class="right" style="width: 30px;"></div>
           </div>
         </div>
         <div class="pages navbar-through toolbar-throug">
           <div data-page="index" class="page">
             <div class="page-content whiteBGColor">
-              <form class="list-block inputList" id="form" action="__MODULE__/Signup/doSign" method="post">
-                <ul>
-                  <li>
-                    <div class="item-content">
-                      <div class="item-inner">
-                        <div class="item-input">
-                          <input type="text" placeholder="请输入手机账号" id="mobile" name="phonenum">
-                        </div>
-                      </div>
+              <form class="list-block inputList">
+                <div class="item-content">
+                  <span class="areaCode">+86</span>
+                  <div class="item-inner">
+                    <div class="item-input">
+                      <input type="text" placeholder="输入11位中国大陆手机号码" id="mobile">
                     </div>
-                  </li>
-                  <li>
-                    <div class="item-content">
-                      <div class="item-inner bottomBorder">
-                        <div class="item-input">
-                          <input type="password" placeholder="请输入密码" id="password" name="password">
-                        </div>
-                      </div>
-                    </div>
-                  </li>
-                </ul>
+                  </div>
+                </div>
               </form>
-              <div class="rightFloat problemLink">
-                <a href="#" class="link redColor">登录遇到问题？</a>
-              </div>
-              <div class="clearFloat"></div>
               <div class="sign">
-                <a href="#" class="external button signBtn" disabled="disabled" onclick="document.getElementById('form').submit();return false;">登录</a>
+                <a href="verify.html" class="button signBtn" disabled="disabled">下一步</a>
               </div>
               
               <p class="greyColor clearBoth OR">OR</p>
@@ -71,9 +54,24 @@
     </div>
     <script type="text/javascript" src="__PUBLIC__/front/js/framework7.min.js"></script>
     <script type="text/javascript" src="__PUBLIC__/front/js/jquery-2.2.2.js"></script>
-    <script type="text/javascript" src="__PUBLIC__/front/js/signin.js"></script>
-    <script type="text/javascript" src="__PUBLIC__/front/js/welcomescreen.js"></script>
-    <script type="text/javascript" src="__PUBLIC__/front/js/myapp/pages/IndexPageController.js"></script>
-    <script type="text/javascript" src="__PUBLIC__/front/js/myapp/init.js"></script>
+    <script >
+    $(document).ready(function(){
+  $("input").blur(function(){
+    var signBtn = $(".signBtn");
+    if ($("#mobile").val()!="") {
+      signBtn.attr("disabled",false);
+      signBtn.css({
+        "background" : "#ea4027"
+      });
+    }
+    else{
+      signBtn.attr("disabled","disabled");
+      signBtn.css({
+        "background" : "#ccc"
+      });
+    }
+  });
+});
+    </script>
   </body>
 </html>
