--- a/ThinkCheer/Application/Home/View/Signup/signup.html
+++ b/ThinkCheer/Application/Home/View/Signup/signup.html
@@ -5,39 +5,75 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <title>注册</title>
+    <title>signin</title>
     <link rel="stylesheet" href="__PUBLIC__/front/css/framework7.ios.min.css">
     <link rel="stylesheet" href="__PUBLIC__/front/css/framework7.ios.colors.min.css">
     <link rel="stylesheet" href="__PUBLIC__/front/css/font-awesome.min.css">
-    <link rel="stylesheet" href="__PUBLIC__/front/css/style.css">
+    <link rel="stylesheet" href="__PUBLIC__/front/css/llh1.css">
+    <script type="text/javascript"  src="__PUBLIC__/front/js/jquery.js"></script>
+    <script type="text/javascript">
+      $(document).ready(function(){
+  $("input").blur(function(){
+    var signBtn = $(".signBtn");
+    if ($("#mobile").val()!="" && $("#password").val()!="") {
+      signBtn.attr("disabled",false);
+      signBtn.css({
+        "background" : "#ea4027"
+      });
+    }
+    else{
+      signBtn.attr("disabled","disabled");
+      signBtn.css({
+        "background" : "#ccc"
+      });
+    }
+  });
+});
+    </script>
   </head>
   <body>
     <div class="statusbar-overlay"></div>
     <div class="views">
       <div class="view view-main">
         <!-- Top Navbar-->
-        <div class="navbar redBGColor">
+        <div class="navbar">
           <div class="navbar-inner">
-            <div class="left"><a href="__MODULE__/Signup/signin"><i class="whiteColor fa fa-arrow-left"></i></a></div>
-            <div class="center whiteColor">注册</div>
-            <div class="right" style="width: 30px;"></div>
+            <div class="left" style="width: 30px;"></div>
+            <div class="center">登 录</div>
+            <div class="right"><a href="signup.html" class="link redColor">注册</a></div>
           </div>
         </div>
         <div class="pages navbar-through toolbar-throug">
           <div data-page="index" class="page">
             <div class="page-content whiteBGColor">
-              <form class="list-block inputList" action="__MODULE__/Signup/sendMsg" id="form" method="post">
-                <div class="item-content">
-                  <span class="areaCode">+86</span>
-                  <div class="item-inner">
-                    <div class="item-input">
-                      <input type="text" placeholder="输入11位中国大陆手机号码" id="mobile" name="phonenum">
+              <div class="list-block inputList">
+                <ul>
+                  <li>
+                    <div class="item-content">
+                      <div class="item-inner">
+                        <div class="item-input">
+                          <input type="text" placeholder="请输入手机账号" id="mobile">
+                        </div>
+                      </div>
                     </div>
-                  </div>
-                </div>
-              </form>
+                  </li>
+                  <li>
+                    <div class="item-content">
+                      <div class="item-inner bottomBorder">
+                        <div class="item-input">
+                          <input type="password" placeholder="请输入密码" id="password">
+                        </div>
+                      </div>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+              <div class="rightFloat problemLink">
+                <a href="#" class="link redColor">登录遇到问题？</a>
+              </div>
+              <div class="clearFloat"></div>
               <div class="sign">
-                <a href="#" class="button signBtn" disabled="disabled" name="submit" onclick="document.getElementById('form').submit();return false;">下一步</a>
+                <a href="index.html" class="button signBtn" disabled="disabled">登录</a>
               </div>
               
               <p class="greyColor clearBoth OR">OR</p>
@@ -53,6 +89,5 @@
     </div>
     <script type="text/javascript" src="__PUBLIC__/front/js/framework7.min.js"></script>
     <script type="text/javascript" src="__PUBLIC__/front/js/jquery-2.2.2.js"></script>
-    <script src="__PUBLIC__/front/js/signup.js"></script>
   </body>
 </html>
