--- a/ThinkCheer/Application/Home/View/Signup/verify.html
+++ b/ThinkCheer/Application/Home/View/Signup/verify.html
@@ -9,30 +9,30 @@
     <link rel="stylesheet" href="__PUBLIC__/front/css/framework7.ios.min.css">
     <link rel="stylesheet" href="__PUBLIC__/front/css/framework7.ios.colors.min.css">
     <link rel="stylesheet" href="__PUBLIC__/front/css/font-awesome.min.css">
-    <link rel="stylesheet" href="__PUBLIC__/front/css/style.css">
+    <link rel="stylesheet" href="__PUBLIC__/front/css/llh1.css">
   </head>
   <body>
     <div class="statusbar-overlay"></div>
     <div class="views">
       <div class="view view-main">
         <!-- Top Navbar-->
-        <div class="navbar redBGColor">
+        <div class="navbar">
           <div class="navbar-inner">
-            <div class="left"><a href="__MODULE__/Signup/signup"><i class="whiteColor fa fa-arrow-left"></i></a></div>
-            <div class="center whiteColor">验证手机</div>
+            <div class="left"><a href="signup.html"><i class="greyColor fa fa-arrow-left"></i></a></div>
+            <div class="center redColor">验证手机</div>
             <div class="right" style="width: 30px;"></div>
           </div>
         </div>
         <div class="pages navbar-through toolbar-throug">
           <div data-page="index" class="page">
             <div class="page-content whiteBGColor">
-            <p class="Center verify">我们发送了6位验证码至</p>
-            <p class="Center verify"><?php echo I("session.phonenum");?></p>
-              <form class="list-block inputList" action="__MODULE__/Signup/doVerify" method="post" id="form">
+            <p class="Center verify">我们发送了4位验证码至</p>
+            <p class="Center verify">+86 123 4567 8901</p>
+              <form class="list-block inputList">
                 <div class="item-content  paddingRight">
                   <div class="item-inner">
                     <div class="item-input">
-                      <input type="text" placeholder="输入验证码" id="PIN" name="verifycode">
+                      <input type="text" placeholder="输入验证码" id="PIN">
                     </div>
                     <div class="">
                       <a href="#" class="button resendBtn" id="resend" disabled="disabled">60s后重新获取</a>
@@ -41,16 +41,60 @@
                 </div>
               </form>
               <div class="sign">
-                <a href="#" class="button signBtn" disabled="disabled" name="submit" onclick="document.getElementById('form').submit();return false;">下一步</a>
+                <a href="improve.html" class="button signBtn" disabled="disabled">下一步</a>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <script src="__PUBLIC__/front/js/framework7.min.js"></script>
-    <script src="__PUBLIC__/front/js/jquery-2.2.2.js"></script>
-    <!-- <script src="js/my-app.js"></script> -->
-    <script src="__PUBLIC__/front/js/verify.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/front/js/framework7.min.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/front/js/jquery-2.2.2.js"></script>
+    <!-- <script src="__PUBLIC__/front/js/my-app.js"></script> -->
+    <script >
+    $(document).ready(function(){
+  var i = 60;
+  var timer = setInterval(function(){
+    var resend = $("#resend");
+    i--;
+    resend.text(i+"s后重新获取");
+    if (i == 0) {
+      clearInterval(timer);
+      resend.text("重新获取验证码");
+      resend.attr("disabled",false);
+      resend.css({
+        "background" : "#ea4027"
+      });
+    }
+  },1000);
+
+  $("input").blur(function(){
+    var signBtn = $(".signBtn");
+    if ($("#nick").val()!="" && $("#password").val()!="") {
+      signBtn.attr("disabled",false);
+      signBtn.css({
+        "background" : "#ea4027"
+      });
+    }
+    else{
+      signBtn.attr("disabled","disabled");
+      signBtn.css({
+        "background" : "#ccc"
+      });
+    }
+  });
+
+  // var timer2 = setInterval(function(){
+  //  var pin = $("#PIN");
+  //  // var jump = $("#jump");
+    
+  //  if (pin.val().length == 4) {
+  //    console.log(pin.val());
+  //    clearInterval(timer2);
+      
+  //  }
+  // },500);
+});
+    </script>
   </body>
 </html>
