后台文件引入成功

--- a/ThinkCheer/Application/Admin/View/Article/content.html
+++ b/ThinkCheer/Application/Admin/View/Article/content.html
@@ -7,11 +7,11 @@
     <meta name="keywords" content="">
     <meta name="description" content="">
 
-    <link rel="shortcut icon" href="favicon.ico"> <link href="css/bootstrap.min.css?v=3.3.6" rel="stylesheet">
-    <link href="css/font-awesome.css?v=4.4.0" rel="stylesheet">
+    <link rel="shortcut icon" href="favicon.ico"> <link href="__PUBLIC__/back/css/bootstrap.min.css?v=3.3.6" rel="stylesheet">
+    <link href="__PUBLIC__/back/css/font-awesome.css?v=4.4.0" rel="stylesheet">
 
-    <link href="css/animate.css" rel="stylesheet">
-    <link href="css/style.css?v=4.1.0" rel="stylesheet">
+    <link href="__PUBLIC__/back/css/animate.css" rel="stylesheet">
+    <link href="__PUBLIC__/back/css/style.css?v=4.1.0" rel="stylesheet">
     <style type="text/css">
 	    p{
 	    	text-indent:2em;
@@ -37,7 +37,7 @@
 						<div class="col-sm-4">查看次数：666</div>
 					</div>
 				</div>
-				<div><img src="img/p1.jpg" width="90%" style="margin:20px 0"/></div>
+				<div><img src="__PUBLIC__/back/img/p1.jpg" width="90%" style="margin:20px 0"/></div>
 				<p style="padding-top:3%;">
 					 <em>Git</em> 是一个分布式的版本控制系统，最初由 <strong>Linus Torvalds</strong> 编写，用作Linux内核代码的管理。在推出后，Git在其它项目中也取得了很大成功，尤其是在 <small>Ruby</small> 社区中。
 				</p>
@@ -96,7 +96,7 @@
 
 
 	<!-- 全局js -->
-    <script src="js/jquery.min.js?v=2.1.4"></script>
-    <script src="js/bootstrap.min.js?v=3.3.6"></script>
+    <script src="__PUBLIC__/back/js/jquery.min.js?v=2.1.4"></script>
+    <script src="__PUBLIC__/back/js/bootstrap.min.js?v=3.3.6"></script>
 </body>
 </html>
