--- a/ThinkCheer/Application/Admin/View/State/list.html
+++ b/ThinkCheer/Application/Admin/View/State/list.html
@@ -7,11 +7,11 @@
     <meta name="keywords" content="">
     <meta name="description" content="">
 
-    <link rel="shortcut icon" href="favicon.ico"> <link href="css/bootstrap.min.css?v=3.3.6" rel="stylesheet">
-    <link href="css/font-awesome.css?v=4.4.0" rel="stylesheet">
+    <link rel="shortcut icon" href="favicon.ico"> <link href="__PUBLIC__/back/css/bootstrap.min.css?v=3.3.6" rel="stylesheet">
+    <link href="__PUBLIC__/back/css/font-awesome.css?v=4.4.0" rel="stylesheet">
 
-    <link href="css/animate.css" rel="stylesheet">
-    <link href="css/style.css?v=4.1.0" rel="stylesheet">
+    <link href="__PUBLIC__/back/css/animate.css" rel="stylesheet">
+    <link href="__PUBLIC__/back/css/style.css?v=4.1.0" rel="stylesheet">
 </head>
 <body>
 	  <div class="row tab-pane active" style="margin-top:1%;" id="tab-6">
@@ -59,7 +59,7 @@
                                     </td> 
                                    
                                      <td style="text-align:center">
-                            <img alt="140x140" src="img/a9.jpg" class="img-circle img-xs" width="30%"/>
+                            <img alt="140x140" src="__PUBLIC__/back/img/a9.jpg" class="img-circle img-xs" width="30%"/>
 
                         </td> <td>
                                         想把我唱给你听
@@ -86,7 +86,7 @@
                                     </td> 
                                    
                                      <td style="text-align:center">
-                            <img alt="140x140" src="img/a9.jpg" class="img-circle img-xs" width="30%"/>
+                            <img alt="140x140" src="__PUBLIC__/back/img/a9.jpg" class="img-circle img-xs" width="30%"/>
 
                         </td> <td>
                                         想把我唱给你听
@@ -113,7 +113,7 @@
                                     </td> 
                                    
                                      <td style="text-align:center">
-                            <img alt="140x140" src="img/a9.jpg" class="img-circle img-xs" width="30%"/>
+                            <img alt="140x140" src="__PUBLIC__/back/img/a9.jpg" class="img-circle img-xs" width="30%"/>
 
                         </td> <td>
                                         想把我唱给你听
@@ -140,7 +140,7 @@
                                     </td> 
                                    
                                      <td style="text-align:center">
-                            <img alt="140x140" src="img/a9.jpg" class="img-circle img-xs" width="30%"/>
+                            <img alt="140x140" src="__PUBLIC__/back/img/a9.jpg" class="img-circle img-xs" width="30%"/>
 
                         </td> <td>
                                         想把我唱给你听
@@ -186,9 +186,9 @@
     </div>
 
 	<!-- 全局js -->
-    <script src="js/jquery.min.js?v=2.1.4"></script>
-    <script src="js/bootstrap.min.js?v=3.3.6"></script>
+    <script src="__PUBLIC__/back/js/jquery.min.js?v=2.1.4"></script>
+    <script src="__PUBLIC__/back/js/bootstrap.min.js?v=3.3.6"></script>
     <!-- 自定义js -->
-    <script src="js/content.js?v=1.0.0"></script>
+    <script src="__PUBLIC__/back/js/content.js?v=1.0.0"></script>
 </body>
 </html>
