--- a/ThinkCheer/Application/Admin/View/Admin/list.html
+++ b/ThinkCheer/Application/Admin/View/Admin/list.html
@@ -7,11 +7,11 @@
     <meta name="keywords" content="">
     <meta name="description" content="">
 
-    <link rel="shortcut icon" href="favicon.ico"> <link href="css/bootstrap.min.css?v=3.3.6" rel="stylesheet">
-    <link href="css/font-awesome.css?v=4.4.0" rel="stylesheet">
+    <link rel="shortcut icon" href="favicon.ico"> <link href="__PUBLIC__/back/css/bootstrap.min.css?v=3.3.6" rel="stylesheet">
+    <link href="__PUBLIC__/back/css/font-awesome.css?v=4.4.0" rel="stylesheet">
 
-    <link href="css/animate.css" rel="stylesheet">
-    <link href="css/style.css?v=4.1.0" rel="stylesheet">
+    <link href="__PUBLIC__/back/css/animate.css" rel="stylesheet">
+    <link href="__PUBLIC__/back/css/style.css?v=4.1.0" rel="stylesheet">
 </head>
 
 <body class="gray-bg">
@@ -36,7 +36,7 @@
                     <div class="contact-box">
                         <div class="col-sm-4">
                             <div class="text-center">
-                                <img alt="image" class="img-circle m-t-xs img-responsive" src="img/a2.jpg">
+                                <img alt="image" class="img-circle m-t-xs img-responsive" src="__PUBLIC__/back/img/a2.jpg">
                                 <div class="m-t-xs font-bold">CTO</div>
                             </div>
                         </div>
@@ -62,7 +62,7 @@
                     <div class="contact-box">
                         <div class="col-sm-4">
                             <div class="text-center">
-                                <img alt="image" class="img-circle m-t-xs img-responsive" src="img/a2.jpg">
+                                <img alt="image" class="img-circle m-t-xs img-responsive" src="__PUBLIC__/back/img/a2.jpg">
                                 <div class="m-t-xs font-bold">CTO</div>
                             </div>
                         </div>
@@ -88,7 +88,7 @@
                     <div class="contact-box">
                         <div class="col-sm-4">
                             <div class="text-center">
-                                <img alt="image" class="img-circle m-t-xs img-responsive" src="img/a2.jpg">
+                                <img alt="image" class="img-circle m-t-xs img-responsive" src="__PUBLIC__/back/img/a2.jpg">
                                 <div class="m-t-xs font-bold">CTO</div>
                             </div>
                         </div>
@@ -114,7 +114,7 @@
                     <div class="contact-box">
                         <div class="col-sm-4">
                             <div class="text-center">
-                                <img alt="image" class="img-circle m-t-xs img-responsive" src="img/a2.jpg">
+                                <img alt="image" class="img-circle m-t-xs img-responsive" src="__PUBLIC__/back/img/a2.jpg">
                                 <div class="m-t-xs font-bold">CTO</div>
                             </div>
                         </div>
@@ -140,7 +140,7 @@
                     <div class="contact-box">
                         <div class="col-sm-4">
                             <div class="text-center">
-                                <img alt="image" class="img-circle m-t-xs img-responsive" src="img/a2.jpg">
+                                <img alt="image" class="img-circle m-t-xs img-responsive" src="__PUBLIC__/back/img/a2.jpg">
                                 <div class="m-t-xs font-bold">CTO</div>
                             </div>
                         </div>
@@ -166,7 +166,7 @@
                     <div class="contact-box">
                         <div class="col-sm-4">
                             <div class="text-center">
-                                <img alt="image" class="img-circle m-t-xs img-responsive" src="img/a2.jpg">
+                                <img alt="image" class="img-circle m-t-xs img-responsive" src="__PUBLIC__/back/img/a2.jpg">
                                 <div class="m-t-xs font-bold">CTO</div>
                             </div>
                         </div>
@@ -192,7 +192,7 @@
                     <div class="contact-box">
                         <div class="col-sm-4">
                             <div class="text-center">
-                                <img alt="image" class="img-circle m-t-xs img-responsive" src="img/a2.jpg">
+                                <img alt="image" class="img-circle m-t-xs img-responsive" src="__PUBLIC__/back/img/a2.jpg">
                                 <div class="m-t-xs font-bold">CTO</div>
                             </div>
                         </div>
@@ -218,7 +218,7 @@
                     <div class="contact-box">
                         <div class="col-sm-4">
                             <div class="text-center">
-                                <img alt="image" class="img-circle m-t-xs img-responsive" src="img/a2.jpg">
+                                <img alt="image" class="img-circle m-t-xs img-responsive" src="__PUBLIC__/back/img/a2.jpg">
                                 <div class="m-t-xs font-bold">CTO</div>
                             </div>
                         </div>
@@ -244,7 +244,7 @@
                     <div class="contact-box">
                         <div class="col-sm-4">
                             <div class="text-center">
-                                <img alt="image" class="img-circle m-t-xs img-responsive" src="img/a2.jpg">
+                                <img alt="image" class="img-circle m-t-xs img-responsive" src="__PUBLIC__/back/img/a2.jpg">
                                 <div class="m-t-xs font-bold">CTO</div>
                             </div>
                         </div>
@@ -273,7 +273,7 @@
                     <div class="contact-box">
                         <div class="col-sm-4">
                             <div class="text-center">
-                                <img alt="image" class="img-circle m-t-xs img-responsive" src="img/a2.jpg">
+                                <img alt="image" class="img-circle m-t-xs img-responsive" src="__PUBLIC__/back/img/a2.jpg">
                                 <div class="m-t-xs font-bold">CTO</div>
                             </div>
                         </div>
@@ -299,7 +299,7 @@
                     <div class="contact-box">
                         <div class="col-sm-4">
                             <div class="text-center">
-                                <img alt="image" class="img-circle m-t-xs img-responsive" src="img/a2.jpg">
+                                <img alt="image" class="img-circle m-t-xs img-responsive" src="__PUBLIC__/back/img/a2.jpg">
                                 <div class="m-t-xs font-bold">CTO</div>
                             </div>
                         </div>
@@ -325,7 +325,7 @@
                     <div class="contact-box">
                         <div class="col-sm-4">
                             <div class="text-center">
-                                <img alt="image" class="img-circle m-t-xs img-responsive" src="img/a2.jpg">
+                                <img alt="image" class="img-circle m-t-xs img-responsive" src="__PUBLIC__/back/img/a2.jpg">
                                 <div class="m-t-xs font-bold">CTO</div>
                             </div>
                         </div>
@@ -351,7 +351,7 @@
                     <div class="contact-box">
                         <div class="col-sm-4">
                             <div class="text-center">
-                                <img alt="image" class="img-circle m-t-xs img-responsive" src="img/a2.jpg">
+                                <img alt="image" class="img-circle m-t-xs img-responsive" src="__PUBLIC__/back/img/a2.jpg">
                                 <div class="m-t-xs font-bold">CTO</div>
                             </div>
                         </div>
@@ -380,7 +380,7 @@
                     <div class="contact-box">
                         <div class="col-sm-4">
                             <div class="text-center">
-                                <img alt="image" class="img-circle m-t-xs img-responsive" src="img/a2.jpg">
+                                <img alt="image" class="img-circle m-t-xs img-responsive" src="__PUBLIC__/back/img/a2.jpg">
                                 <div class="m-t-xs font-bold">CTO</div>
                             </div>
                         </div>
@@ -406,7 +406,7 @@
                     <div class="contact-box">
                         <div class="col-sm-4">
                             <div class="text-center">
-                                <img alt="image" class="img-circle m-t-xs img-responsive" src="img/a2.jpg">
+                                <img alt="image" class="img-circle m-t-xs img-responsive" src="__PUBLIC__/back/img/a2.jpg">
                                 <div class="m-t-xs font-bold">CTO</div>
                             </div>
                         </div>
@@ -432,7 +432,7 @@
                     <div class="contact-box">
                         <div class="col-sm-4">
                             <div class="text-center">
-                                <img alt="image" class="img-circle m-t-xs img-responsive" src="img/a2.jpg">
+                                <img alt="image" class="img-circle m-t-xs img-responsive" src="__PUBLIC__/back/img/a2.jpg">
                                 <div class="m-t-xs font-bold">CTO</div>
                             </div>
                         </div>
@@ -460,7 +460,7 @@
                     <div class="contact-box">
                         <div class="col-sm-4">
                             <div class="text-center">
-                                <img alt="image" class="img-circle m-t-xs img-responsive" src="img/a2.jpg">
+                                <img alt="image" class="img-circle m-t-xs img-responsive" src="__PUBLIC__/back/img/a2.jpg">
                                 <div class="m-t-xs font-bold">CTO</div>
                             </div>
                         </div>
@@ -486,7 +486,7 @@
                     <div class="contact-box">
                         <div class="col-sm-4">
                             <div class="text-center">
-                                <img alt="image" class="img-circle m-t-xs img-responsive" src="img/a2.jpg">
+                                <img alt="image" class="img-circle m-t-xs img-responsive" src="__PUBLIC__/back/img/a2.jpg">
                                 <div class="m-t-xs font-bold">CTO</div>
                             </div>
                         </div>
@@ -512,7 +512,7 @@
                     <div class="contact-box">
                         <div class="col-sm-4">
                             <div class="text-center">
-                                <img alt="image" class="img-circle m-t-xs img-responsive" src="img/a2.jpg">
+                                <img alt="image" class="img-circle m-t-xs img-responsive" src="__PUBLIC__/back/img/a2.jpg">
                                 <div class="m-t-xs font-bold">CTO</div>
                             </div>
                         </div>
@@ -556,10 +556,10 @@
     </div>
 </div>
     <!-- 全局js -->
-    <script src="js/jquery.min.js?v=2.1.4"></script>
-    <script src="js/bootstrap.min.js?v=3.3.6"></script>
+    <script src="__PUBLIC__/back/js/jquery.min.js?v=2.1.4"></script>
+    <script src="__PUBLIC__/back/js/bootstrap.min.js?v=3.3.6"></script>
     <!-- 自定义js -->
-    <script src="js/content.js?v=1.0.0"></script>
+    <script src="__PUBLIC__/back/js/content.js?v=1.0.0"></script>
     <script>
         $(document).ready(function () {
             $('.contact-box').each(function () {
