--- a/ThinkCheer/Application/Admin/View/Index/index.html
+++ b/ThinkCheer/Application/Admin/View/Index/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="renderer" content="webkit">
 
-    <title>- 主页</title>
+    <title> hAdmin- 主页</title>
 
     <meta name="keywords" content="">
     <meta name="description" content="">
@@ -15,8 +15,7 @@
     <meta http-equiv="refresh" content="0;ie.html" />
     <![endif]-->
 
-    <link rel="shortcut icon" href="favicon.ico">
-    <link href="__PUBLIC__/back/css/bootstrap.min.css?v=3.3.6" rel="stylesheet">
+    <link rel="shortcut icon" href="favicon.ico"> <link href="__PUBLIC__/back/css/bootstrap.min.css?v=3.3.6" rel="stylesheet">
     <link href="__PUBLIC__/back/css/font-awesome.min.css?v=4.4.0" rel="stylesheet">
     <link href="__PUBLIC__/back/css/animate.css" rel="stylesheet">
     <link href="__PUBLIC__/back/css/style.css?v=4.1.0" rel="stylesheet">
@@ -31,8 +30,8 @@
             <div class="sidebar-collapse">
                 <ul class="nav" id="side-menu">
                     <li class="nav-header">
-                        <div class="logo-element" style="display: block;"><img src="__PUBLIC__/back/img/logo.png" width="50px" />
-                        </div>
+                       <!--  <div class="logo-element" style="display: block;"><img src="img/logo.png" width="50px" />
+                        </div> -->
                     </li>
                     <li>
                         <a class="J_menuItem" href="__MODULE__/Index/indexIndex.html">
@@ -48,52 +47,52 @@
                         </a>
                         <ul class="nav nav-second-level">
                             <li>
-                                <a class="J_menuItem" href="__MODULE__/Admin/lists">管理员列表</a>
+                                <a class="J_menuItem" href="adminList.html">管理员列表</a>
                             </li>
                             <li>
-                                <a class="J_menuItem" href="__MODULE__/Admin/add">添加管理员</a>
+                                <a class="J_menuItem" href="addAdmins.html">添加管理员</a>
                             </li>
                             <li>
-                                <a class="J_menuItem" href="__MODULE__/Admin/modi">修改个人信息</a>
+                                <a class="J_menuItem" href="addAdmins.html">修改个人信息</a>
                             </li>
                         </ul>
                     </li>
                     <li>
                         <a href="#"><i class="fa fa-folder-open"></i> <span class="nav-label">作品管理</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
-                            <li><a class="J_menuItem" href="__MODULE__/Work/articleLists">文章管理</a>
+                            <li><a class="J_menuItem" href="articleAdminis.html">文章管理</a>
                             </li>
-                            <li><a class="J_menuItem" href="__MODULE__/Work/videoLists">视频管理</a>
+                            <li><a class="J_menuItem" href="imgAdminis.html">图片管理</a>
                             </li>
-                            <li><a class="J_menuItem" href="__MODULE__/Work/imageLists">图片管理</a>
+                            <li><a class="J_menuItem" href="musicguanli.html">音乐管理</a>
+                            </li>
+                             <li><a class="J_menuItem" href="dongtai.html">动态管理</a>
                             </li>
                         </ul>
                     </li>
                     <li>
-                        <a class="J_menuItem" href="__MODULE__/Feedback/index"><i class="fa fa-envelope"></i> <span class="nav-label">反馈管理</span></a>
+                        <a class="J_menuItem" href="back.html"><i class="fa fa-envelope"></i> <span class="nav-label">反馈管理</span></a>
                     </li>
                     <li>
                         <a href="user.html"><i class="fa fa-user"></i> <span class="nav-label">用户管理</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
                             <li>
-                                <a class="J_menuItem" href="__MODULE__/User/lists">用户列表</a>
+                                <a class="J_menuItem" href="user.html">用户列表</a>
                             </li>
                             
                         </ul>
                     </li>
-                    <li>
-                        <a href="#"><i class="fa fa-book"></i> <span class="nav-label">菜谱管理</span><span class="fa arrow"></span></a>
+                     <li>
+                        <a href="user.html"><i class="fa fa-thumbs-up"></i> <span class="nav-label">推荐位管理</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
                             <li>
-                                <a class="J_menuItem" href="__MODULE__/Recipe/lists">菜谱列表</a>
+                                <a class="J_menuItem" href="recommend.html">推荐位管理</a>
                             </li>
-                            <li>
-                                <a class="J_menuItem" href="__MODULE__/Recipe/add">添加菜谱</a>
+                             <li>
+                                <a class="J_menuItem" href="addtuijian.html">添加推荐位</a>
                             </li>
+                            
                         </ul>
-                    </li>
-                    <li>
-                        <a class="J_menuItem" href="__MODULE__/Recommend/lists"><i class="fa fa-thumbs-up"></i> <span class="nav-label">推荐位管理</span></a>
                     </li>
 
                 </ul>
@@ -127,7 +126,7 @@
                 </nav>
             </div>
             <div class="row J_mainContent" id="content-main">
-                <iframe id="J_iframe" width="100%" height="100%" src="__MODULE__/Index/indexIndex" frameborder="0" data-id="index_v1.html" seamless></iframe>
+                <iframe id="J_iframe" width="100%" height="100%" src="__MODULE__/Index/indexIndex.html" frameborder="0" data-id="index_v1.html" seamless></iframe>
             </div>
         </div>
         <!--右侧部分结束-->
@@ -142,7 +141,7 @@
 
     <!-- 自定义js -->
     <script src="__PUBLIC__/back/js/hAdmin.js?v=4.1.0"></script>
-    <script src="__PUBLIC__/back/js/index.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/back/js/index.js"></script>
 
     <!-- 第三方插件 -->
     <script src="__PUBLIC__/back/js/plugins/pace/pace.min.js"></script>
