--- a/ThinkCheer/Application/Admin/View/Music/list.html
+++ b/ThinkCheer/Application/Admin/View/Music/list.html
@@ -7,11 +7,11 @@
     <meta name="keywords" content="">
     <meta name="description" content="">
 
-    <link rel="shortcut icon" href="favicon.ico"> <link href="css/bootstrap.min.css?v=3.3.6" rel="stylesheet">
-    <link href="css/font-awesome.css?v=4.4.0" rel="stylesheet">
+    <link rel="shortcut icon" href="favicon.ico"> <link href="__PUBLIC__/back/css/bootstrap.min.css?v=3.3.6" rel="stylesheet">
+    <link href="__PUBLIC__/back/css/font-awesome.css?v=4.4.0" rel="stylesheet">
 
-    <link href="css/animate.css" rel="stylesheet">
-    <link href="css/style.css?v=4.1.0" rel="stylesheet">
+    <link href="__PUBLIC__/back/css/animate.css" rel="stylesheet">
+    <link href="__PUBLIC__/back/css/style.css?v=4.1.0" rel="stylesheet">
     <style type="text/css">
 	    td a:link{
 	    	color: #424242;
@@ -66,7 +66,7 @@
                                         爱的供养
                                     </td>
                                      <td style="text-align:center">
-                            <img alt="140x140" src="img/a9.jpg" class="img-circle img-xs" width="30%"/>
+                            <img alt="140x140" src="__PUBLIC__/back/img/a9.jpg" class="img-circle img-xs" width="30%"/>
                         </td>
                                     <td>  
                                         <button type="button" class="btn btn-link ">
@@ -91,7 +91,7 @@
                                         爱的供养
                                     </td>
                                      <td style="text-align:center">
-                            <img alt="140x140" src="img/a9.jpg" class="img-circle img-xs" width="30%"/>
+                            <img alt="140x140" src="__PUBLIC__/back/img/a9.jpg" class="img-circle img-xs" width="30%"/>
                         </td>
                                     <td>  
                                         <button type="button" class="btn btn-link ">
@@ -116,7 +116,7 @@
                                         爱的供养
                                     </td>
                                      <td style="text-align:center">
-                            <img alt="140x140" src="img/a9.jpg" class="img-circle img-xs" width="30%"/>
+                            <img alt="140x140" src="__PUBLIC__/back/img/a9.jpg" class="img-circle img-xs" width="30%"/>
                         </td>
                                     <td>
                                         <button type="button" class="btn btn-link ">
@@ -141,7 +141,7 @@
                                         爱的供养
                                     </td>
                                      <td style="text-align:center">
-                            <img alt="140x140" src="img/a9.jpg" class="img-circle img-xs" width="30%"/>
+                            <img alt="140x140" src="__PUBLIC__/back/img/a9.jpg" class="img-circle img-xs" width="30%"/>
                         </td>
                                     <td>  
                                         <button type="button" class="btn btn-link ">
@@ -183,9 +183,9 @@
     </div>
 
     <!-- 全局js -->
-    <script src="js/jquery.min.js?v=2.1.4"></script>
-    <script src="js/bootstrap.min.js?v=3.3.6"></script>
+    <script src="__PUBLIC__/back/js/jquery.min.js?v=2.1.4"></script>
+    <script src="__PUBLIC__/back/js/bootstrap.min.js?v=3.3.6"></script>
     <!-- 自定义js -->
-    <script src="js/content.js?v=1.0.0"></script>    
+    <script src="__PUBLIC__/back/js/content.js?v=1.0.0"></script>    
 </body>
 </html>
