--- a/ThinkCheer/Application/Admin/View/Recommend/list.html
+++ b/ThinkCheer/Application/Admin/View/Recommend/list.html
@@ -11,11 +11,11 @@
     <meta name="keywords" content="">
     <meta name="description" content="">
 
-     <link rel="shortcut icon" href="favicon.ico"> <link href="css/bootstrap.min.css?v=3.3.6" rel="stylesheet">
-    <link href="css/font-awesome.css?v=4.4.0" rel="stylesheet">
-    <link href="css/plugins/iCheck/custom.css" rel="stylesheet">
-    <link href="css/animate.css" rel="stylesheet">
-    <link href="css/style.css?v=4.1.0" rel="stylesheet">
+     <link rel="shortcut icon" href="favicon.ico"> <link href="__PUBLIC__/back/css/bootstrap.min.css?v=3.3.6" rel="stylesheet">
+    <link href="__PUBLIC__/back/css/font-awesome.css?v=4.4.0" rel="stylesheet">
+    <link href="__PUBLIC__/back/css/plugins/iCheck/custom.css" rel="stylesheet">
+    <link href="__PUBLIC__/back/css/animate.css" rel="stylesheet">
+    <link href="__PUBLIC__/back/css/style.css?v=4.1.0" rel="stylesheet">
 <style type="text/css">
     td,th{
         text-align: center;
@@ -45,7 +45,7 @@
                                 <tr>
                                     <td style="text-align:center">1</td>
                                     <td style="text-align:center">
-                            <img alt="140x140" src="img/a9.jpg" class="img-circle img-xs" width="30%"/>
+                            <img alt="140x140" src="__PUBLIC__/back/img/a9.jpg" class="img-circle img-xs" width="30%"/>
                         </td>
                                     <td>
                                         <a href="#" class="button text-navy"><i class="fa fa-level-up">置顶</i></a>
@@ -55,7 +55,7 @@
                                 <tr>
                                     <td style="text-align:center">2</td>
                                    <td style="text-align:center">
-                            <img alt="140x140" src="img/a9.jpg" class="img-circle img-xs" width="30%"/>
+                            <img alt="140x140" src="__PUBLIC__/back/img/a9.jpg" class="img-circle img-xs" width="30%"/>
                         </td>
                                        <td> <a href="#" class="button text-navy"><i class="fa fa-level-up">置顶</i></a>
                                         <a href="#" class="button text-navy"><i class="fa fa-trash-o">删除</i></a>
@@ -64,7 +64,7 @@
                                 <tr>
                                     <td style="text-align:center">3</td>
                                   <td style="text-align:center">
-                            <img alt="140x140" src="img/a9.jpg" class="img-circle img-xs" width="30%"/>
+                            <img alt="140x140" src="__PUBLIC__/back/img/a9.jpg" class="img-circle img-xs" width="30%"/>
                         </td>
                                       <td>  <a href="#" class="button text-navy"><i class="fa fa-level-up">置顶</i></a>
                                         <a href="#" class="button text-navy"><i class="fa fa-trash-o">删除</i></a>
@@ -105,7 +105,7 @@
                                     <td style="text-align:center">1</td>
                                     <td style="text-align:center"><a href="tuixiang.html">爱你爱你</a></td>
                                       <td style="text-align:center">
-                            <img alt="140x140" src="img/a9.jpg" class="img-circle img-xs" width="30%"/>
+                            <img alt="140x140" src="__PUBLIC__/back/img/a9.jpg" class="img-circle img-xs" width="30%"/>
                         </td>
                                     <td>就如同外人看来钢铁大街</td>
                                     <td style="text-align:center">就是爱你</td>
@@ -119,7 +119,7 @@
                                     <td style="text-align:center">1</td>
                                     <td style="text-align:center"><a href="tuixiang.html">爱你爱你</a></td>
                                       <td style="text-align:center">
-                            <img alt="140x140" src="img/a9.jpg" class="img-circle img-xs" width="30%"/>
+                            <img alt="140x140" src="__PUBLIC__/back/img/a9.jpg" class="img-circle img-xs" width="30%"/>
                         </td>
                                     <td>就如同外人看来钢铁大街</td>
                                     <td style="text-align:center">就是爱你</td>
@@ -133,7 +133,7 @@
                                     <td style="text-align:center">1</td>
                                     <td style="text-align:center"><a href="tuixiang.html">爱你爱你</a></td>
                                       <td style="text-align:center">
-                            <img alt="140x140" src="img/a9.jpg" class="img-circle img-xs" width="30%"/>
+                            <img alt="140x140" src="__PUBLIC__/back/img/a9.jpg" class="img-circle img-xs" width="30%"/>
                         </td>
                                     <td>就如同外人看来钢铁大街</td>
                                     <td style="text-align:center">就是爱你</td>
@@ -152,23 +152,23 @@
     </div>
 
     <!-- 全局js -->
-    <script src="js/jquery.min.js?v=2.1.4"></script>
-    <script src="js/bootstrap.min.js?v=3.3.6"></script>
+    <script src="__PUBLIC__/back/js/jquery.min.js?v=2.1.4"></script>
+    <script src="__PUBLIC__/back/js/bootstrap.min.js?v=3.3.6"></script>
 
 
 
     <!-- Peity -->
-    <script src="js/plugins/peity/jquery.peity.min.js"></script>
+    <script src="__PUBLIC__/back/js/plugins/peity/jquery.peity.min.js"></script>
 
     <!-- 自定义js -->
-    <script src="js/content.js?v=1.0.0"></script>
+    <script src="__PUBLIC__/back/js/content.js?v=1.0.0"></script>
 
 
     <!-- iCheck -->
-    <script src="js/plugins/iCheck/icheck.min.js"></script>
+    <script src="__PUBLIC__/back/js/plugins/iCheck/icheck.min.js"></script>
 
     <!-- Peity -->
-    <script src="js/demo/peity-demo.js"></script>
+    <script src="__PUBLIC__/back/js/demo/peity-demo.js"></script>
 
     <script>
         $(document).ready(function () {
