--- a/ThinkCheer/Application/Admin/View/State/content.html
+++ b/ThinkCheer/Application/Admin/View/State/content.html
@@ -7,11 +7,11 @@
     <meta name="keywords" content="">
     <meta name="description" content="">
 
-    <link rel="shortcut icon" href="favicon.ico"> <link href="css/bootstrap.min.css?v=3.3.6" rel="stylesheet">
-    <link href="css/font-awesome.css?v=4.4.0" rel="stylesheet">
+    <link rel="shortcut icon" href="favicon.ico"> <link href="__PUBLIC__/back/css/bootstrap.min.css?v=3.3.6" rel="stylesheet">
+    <link href="__PUBLIC__/back/css/font-awesome.css?v=4.4.0" rel="stylesheet">
 
-    <link href="css/animate.css" rel="stylesheet">
-    <link href="css/style.css?v=4.1.0" rel="stylesheet">
+    <link href="__PUBLIC__/back/css/animate.css" rel="stylesheet">
+    <link href="__PUBLIC__/back/css/style.css?v=4.1.0" rel="stylesheet">
     <style type="text/css">
 	    p{
 	    	text-indent:2em;
@@ -37,7 +37,7 @@
 						<div class="col-sm-4">查看次数：666</div>
 					</div>
 				</div>
-				<div><img src="img/p1.jpg" width="90%" style="margin:20px 0"/></div>
+				<div><img src="__PUBLIC__/back/img/p1.jpg" width="90%" style="margin:20px 0"/></div>
 				<audio src="music/脸红的思春期-Some1.mp3" controls="controls" style="text-align:center;width:90%;margin:50px 0">
 Your browser does not support the audio element.
 </audio> 
@@ -103,7 +103,7 @@ Your browser does not support the audio element.
 
 
 	<!-- 全局js -->
-    <script src="js/jquery.min.js?v=2.1.4"></script>
-    <script src="js/bootstrap.min.js?v=3.3.6"></script>
+    <script src="__PUBLIC__/back/js/jquery.min.js?v=2.1.4"></script>
+    <script src="__PUBLIC__/back/js/bootstrap.min.js?v=3.3.6"></script>
 </body>
 </html>
