--- a/ThinkCheer/Application/Admin/View/Login/login.html
+++ b/ThinkCheer/Application/Admin/View/Login/login.html
@@ -30,7 +30,7 @@
             <div class="col-sm-12">
                 <form method="post" action="__MODULE__/Login/login">
                     <h4 class="no-margins">登录：</h4>
-                    <p class="m-t-md">登录到味+后台</p>
+                    <p class="m-t-md">登录到 Cheer 后台</p>
                     <input type="text" name="adminname" class="form-control uname" placeholder="用户名" />
                     <input type="password" name="password" class="form-control pword m-b" placeholder="密码" />
                     <a href="">忘记密码了？</a>
