--- a/front/css/llh.css
+++ b/front/css/llh.css
@@ -140,3 +140,17 @@ span.rich_media_meta_nickname{display:none}
 	text-align: left;
 	width: 100%;
 }
+
+
+
+ #img-file{
+    opacity: 0;
+    padding-left: 0;
+    width: 150px;
+    height: 50px;
+    border: 0;
+    position: absolute;
+  /*  top: 53px;
+    left: 22px;*/
+    bottom:5px;
+}
