后台文章管理列表完成

--- a/ThinkCheer/Application/Admin/View/Index/index.html
+++ b/ThinkCheer/Application/Admin/View/Index/index.html
@@ -60,7 +60,7 @@
                     <li>
                         <a href="#"><i class="fa fa-folder-open"></i> <span class="nav-label">作品管理</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
-                            <li><a class="J_menuItem" href="articleAdminis.html">文章管理</a>
+                            <li><a class="J_menuItem" href="__MODULE__/Article/lists">文章管理</a>
                             </li>
                             <li><a class="J_menuItem" href="imgAdminis.html">图片管理</a>
                             </li>
