--- a/ThinkCheer/Application/Admin/View/Article/content.html
+++ b/ThinkCheer/Application/Admin/View/Article/content.html
@@ -24,21 +24,25 @@
 </head>
 <body>
 	<div class="container" style="margin-top:2%">
+	<volist name="article" id="vl">
 		<div class="row clearfix">
 			<div class="col-sm-12 column">
 				<h1 style="text-align:center;">
-					老罗说虾话
+					{$vl.title}
 				</h1>
 				<div class="col-sm-12 column">
 					<div class="col-sm-2"></div>
 					<div class="col-sm-10">
-						<div class="col-sm-4">作者：老罗。</div>
-						<div class="col-sm-4">发布日期：2014-09-09</div>
-						<div class="col-sm-4">查看次数：666</div>
+						<div class="col-sm-4">作者：{$vl.username}</div>
+						<div class="col-sm-4">发布日期：{$vl.date}</div>
+						<div class="col-sm-4">查看次数：{$vl.amount}</div>
 					</div>
 				</div>
-				<div><img src="__PUBLIC__/back/img/p1.jpg" width="90%" style="margin:20px 0"/></div>
-				<p style="padding-top:3%;">
+				<div><img src="__PUBLIC__/{$vl.img}" width="90%" style="margin:20px 0"/></div>
+				<div style="padding-top:5%;padding-bottom:3%">
+					{$vl.content}
+				</div>
+				<!-- <p style="padding-top:3%;">
 					 <em>Git</em> 是一个分布式的版本控制系统，最初由 <strong>Linus Torvalds</strong> 编写，用作Linux内核代码的管理。在推出后，Git在其它项目中也取得了很大成功，尤其是在 <small>Ruby</small> 社区中。
 				</p>
 				<p>
@@ -49,7 +53,7 @@
 				</p>
 				<p>
 					虾按出产来源不同，分为海水虾和淡水虾两种。海虾又叫红虾，包括龙虾、对虾等，其中以对虾的味道最美，为食中上味、海产名品。北大西洋的普通欧洲虾,亦称普通褐虾)约8公分(3吋)长，灰或暗褐色，有褐色或淡红斑点。刚毛对虾分布于北卡罗来纳至墨西哥一带沿海；长18公分(7吋)；幼体生活于浅湾，后入深海，食小型动植物。以上两种与褐沟虾和粉红沟虾均有重要经济价值。Crangon franciscorum是太平洋的大虾。淡水虾如匙虾科(Atyidae)，主要在温暖地区，有的在半咸水中；有的长达20公分(8吋)。Ataephyra desmarestii长1.6～2.7公分(0.6～1.1吋)，分布于欧洲、北非及近东的淡水水域，成群生活于水生植物中。加利福尼亚的Syncaris属(长2～5公分〔1～2吋〕)及Palaemonias ganteri(长度为前者之半，仅见于肯塔基州马默斯洞穴〔Mammoth Cave〕)为北美著名的淡水大虾。Xiphocaris属分布于西印度群岛的淡水。
-				</p>
+				</p> -->
 			</div>
 		</div>
 		<div class="row clearfix" style="border-top:solid 1px #959595;border-bottom:solid 1px #959595;padding:1% 0;">
@@ -92,6 +96,7 @@
 			   <li class="next"><a href="#">下一篇：你知道怎么吃笋吗？ &rarr;</a></li> 
 			</ul>
 		</div>
+	</volist>
 	</div>
 
 
