--- a/ThinkCheer/Application/Home/View/Signup/signup.html
+++ b/ThinkCheer/Application/Home/View/Signup/signup.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <title>signin</title>
+    <title>登录</title>
     <link rel="stylesheet" href="__PUBLIC__/front/css/framework7.ios.min.css">
     <link rel="stylesheet" href="__PUBLIC__/front/css/framework7.ios.colors.min.css">
     <link rel="stylesheet" href="__PUBLIC__/front/css/font-awesome.min.css">
@@ -40,10 +40,11 @@
           <div class="navbar-inner">
             <div class="left" style="width: 30px;"></div>
             <div class="center">登 录</div>
-            <div class="right"><a href="signup.html" class="link redColor">注册</a></div>
+            <div class="right"><a href="signin.html" class="link redColor">注册</a></div>
           </div>
         </div>
         <div class="pages navbar-through toolbar-throug">
+        <form method="post" id="form" action="__MODULE__/Signup/doSign">
           <div data-page="index" class="page">
             <div class="page-content whiteBGColor">
               <div class="list-block inputList">
@@ -52,7 +53,7 @@
                     <div class="item-content">
                       <div class="item-inner">
                         <div class="item-input">
-                          <input type="text" placeholder="请输入手机账号" id="mobile">
+                          <input type="text" name="mobile" placeholder="请输入手机账号" id="mobile">
                         </div>
                       </div>
                     </div>
@@ -61,7 +62,7 @@
                     <div class="item-content">
                       <div class="item-inner bottomBorder">
                         <div class="item-input">
-                          <input type="password" placeholder="请输入密码" id="password">
+                          <input type="password" name="password" placeholder="请输入密码" id="password">
                         </div>
                       </div>
                     </div>
@@ -73,7 +74,7 @@
               </div>
               <div class="clearFloat"></div>
               <div class="sign">
-                <a href="index.html" class="button signBtn" disabled="disabled">登录</a>
+                <a href="#" class="button signBtn" disabled="disabled"  onclick="document.getElementById('form').submit();return false;">登录</a>
               </div>
               
               <p class="greyColor clearBoth OR">OR</p>
@@ -84,6 +85,7 @@
               </div>
             </div>
           </div>
+        </form>
         </div>
       </div>
     </div>
