--- a/ThinkCheer/Application/Home/View/Signup/signin.html
+++ b/ThinkCheer/Application/Home/View/Signup/signin.html
@@ -19,7 +19,7 @@
         <!-- Top Navbar-->
         <div class="navbar">
           <div class="navbar-inner">
-            <div class="left"><a href="signin.html" class="greyColor"><i class=" fa fa-arrow-left"></i></a></div>
+            <div class="left"><a href="#" onClick="javascript :history.back(-1);" class="greyColor"><i class=" fa fa-arrow-left"></i></a></div>
             <div class="center redColor">注册</div>
             <div class="right" style="width: 30px;"></div>
           </div>
@@ -27,18 +27,34 @@
         <div class="pages navbar-through toolbar-throug">
           <div data-page="index" class="page">
             <div class="page-content whiteBGColor">
-              <form class="list-block inputList">
+              <form class="list-block inputList" action="__MODULE__/Signup/sendMsg" id="form" method="post">
                 <div class="item-content">
-                  <span class="areaCode">+86</span>
+                  <span class="areaCode" style="width:90px">手机号</span>
                   <div class="item-inner">
                     <div class="item-input">
-                      <input type="text" placeholder="输入11位中国大陆手机号码" id="mobile">
+                      <input type="text" placeholder="请填入手机号" id="mobile" name="mobile">
+                    </div>
+                  </div>
+                </div>
+                <div class="item-content">
+                  <span class="areaCode" style="width:90px">用户名</span>
+                  <div class="item-inner">
+                    <div class="item-input">
+                      <input type="text" placeholder="请输入用户名" id="username" name="username">
+                    </div>
+                  </div>
+                </div>
+                <div class="item-content">
+                  <span class="areaCode" style="width:90px" >密&#12288码</span>
+                  <div class="item-inner">
+                    <div class="item-input">
+                      <input type="text" placeholder="请设置密码" id="password" name="password">
                     </div>
                   </div>
                 </div>
               </form>
               <div class="sign">
-                <a href="verify.html" class="button signBtn" disabled="disabled">下一步</a>
+                <a href="#" class="button signBtn" disabled="disabled" name="submit" onclick="document.getElementById('form').submit();return false;">注册</a>
               </div>
               
               <p class="greyColor clearBoth OR">OR</p>
@@ -58,7 +74,7 @@
     $(document).ready(function(){
   $("input").blur(function(){
     var signBtn = $(".signBtn");
-    if ($("#mobile").val()!="") {
+    if ($("#mobile").val()!="" && $("#password").val()!="" && $("#username").val()!="") {
       signBtn.attr("disabled",false);
       signBtn.css({
         "background" : "#ea4027"
